@@ -53,6 +53,7 @@ Fixed bugs
 - Fixed numerical bug by creating and checking the empty solution when problem vanishes in presolving.
 - Fixed several bugs in reoptimization.
 - Fixed bug in cons_bounddisjunction in which a constraint leads to a cutoff.
+- Fixed bug in reoptimization by avoiding redundant literatl for bound disjunctions.
 
 Miscellaneous
 -------------
